Fixed extra margin on ArnSubPage

--- a/portals/styles/styles.css
+++ b/portals/styles/styles.css
@@ -1536,10 +1536,6 @@ div#overlay {
 }
 
 @media screen and (min-width:800px) {
-    .ArnSubPage {
-        margin: 125px auto 70px;
-    }
-
     .CheckOutForm .ArnSubPage {
         margin-top: 42px;
     }
